--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "pg": "^6.1.3",
+    "pg-promise": "^5.6.3",
     "request": "^2.80.0",
+    "request-promise": "^4.1.1",
     "xml2js": "^0.4.17"
   }
 }
